--- a/views/adminpanel/config_website_categories.html
+++ b/views/adminpanel/config_website_categories.html
@@ -1,10 +1,10 @@
 {{extend 'layoutadmin.html'}}
         <div class="span9">
           <div class="container-fluid well">
-            <h1>{{=T("Social Network Links")}}</h1>
+            <h1>{{=T("Projects Categories")}}</h1>
           </div>
           <div class="container-fluid">
-            <div id="config_website_links">
+            <div id="config_website_categories">
               {{=grid}}
             </div>
           </div><!--/row-->
