--- a/views/adminpanel/config_website_images.html
+++ b/views/adminpanel/config_website_images.html
@@ -7,7 +7,9 @@
           <div class="container-fluid well">
             <p>
               <h2>{{=T("Website Images")}}</h2>
-              {{=form_images}}
+              <div id="config_website_images" >
+                {{=form_images}}
+              </div>
             </p>        
           </div><!--/row-->
         </div><!--/span-->
