--- a/views/adminpanel/finish_successfully.html
+++ b/views/adminpanel/finish_successfully.html
@@ -2,7 +2,7 @@
         <div class="span9">
           <div class="container-fluid well">
             <h1>{{=T("Finish Successfully")}}</h1>
-            <p>{{=T("Finish project that obtain the goal")}}</p>
+            <p>{{=T("Finish project that achieved the goal")}}</p>
           </div>
           <div class="container-fluid well">
             <p class="alert alert-error" id="project_warning">
