--- a/views/project/donate.html
+++ b/views/project/donate.html
@@ -78,7 +78,11 @@ $(function(){
           							{{remaining_days = info.project.end_date - date.today()}}
           							<h4>{{=info.project.project_name}}</h4>
           							<img src="{{=URL('download', args=info.project.image)}}" class="payment-img" alt="{{=info.project.project_name}}"><br><br>
-          							<p>Projeto de <a href="#">{{=info.auth_user.first_name}} {{=info.auth_user.last_name}}</a></p>
+          							<p>Projeto de 
+          								<a href="{{=URL(c='user', f='show_user', args=info.auth_user.id)}}">
+          									{{=info.auth_user.first_name}} {{=info.auth_user.last_name}}
+          								</a>
+          							</p>
           							<p>{{=info.project.short_description}}</p>
           							<p>{{=remaining_days.days}} dias restantes</p>
           						{{pass}}       
