--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -55,7 +55,7 @@
                     <strong>{{=T("Phone")}}:</strong> {{=auth.user.phone or ''}}
                   </p>
                   <p>
-                    <strong>{{=T("EIN")}}:</strong> {{=auth.user.ein or ''}}
+                    <strong>{{=T("SSC (social security card)")}}:</strong> {{=auth.user.ssc or ''}}
                   </p> 
                   <p>
                     <strong>{{=T("Website")}}:</strong> {{=auth.user.website or ''}}
