--- a/views/project/inform.html
+++ b/views/project/inform.html
@@ -3,13 +3,13 @@
         <div class="row-fluid">  
           <section>
             <div class="span12">
-                <h1>Operação Ilegal</h1><hr>
+                <h1>{{=T("Illegal Operation")}}</h1><hr>
             </div>
           </section>
           <section>
             <div class="span12 well form-project">
               <p>
-                Você tentou realizar uma operação irregular. Um email de notificação foi enviada para o administrador do site!
+                {{=T("You tried to do an irregular operation. An e-mail was sent to the website administrator.")}}                
               </p>
             </div>            
           </section>              
