--- a/views/layoutadmin.html
+++ b/views/layoutadmin.html
@@ -102,6 +102,7 @@
               <li><a href="{{=URL(c='adminpanel', f='config_website_categories')}}">{{=T("Projects Categories")}}</a></li>
               <li><a href="{{=URL(c='adminpanel', f='config_website_images')}}">{{=T("Website Images")}}</a></li>
               <li><a href="{{=URL(c='adminpanel', f='config_website_links')}}">{{=T("Social Network")}}</a></li>
+              <li><a href="{{=URL(c='adminpanel', f='config_website_faq')}}">{{=T("F.A.Q")}}</a></li>
               <li><a href="{{=URL(c='adminpanel', f='config_website_email')}}">{{=T("Email Settings")}}</a></li>
               <li><a href="{{=URL(c='adminpanel', f='config_website_payment')}}">{{=T("Payment Settings")}}</a></li>
             </ul>
