--- a/static/css/style.css
+++ b/static/css/style.css
@@ -264,3 +264,12 @@ div.web2py_console .hidden{
     margin-left: 5px;
     margin-right: 5px;
 }
+
+/*config_website_faq*/
+#config_website_faq .w2p_trap{
+    margin-bottom: 10px !important;
+    margin-left: 5px;
+}
+#config_website_faq .web2py_console .w2p_trap{
+    margin-left: -20px;
+}
