Ajustes de layout

--- a/views/adminpanel/config_website_email.html
+++ b/views/adminpanel/config_website_email.html
@@ -1,10 +1,10 @@
 {{extend 'layoutadmin.html'}}
         <div class="span9">
-          <div class="container-fluid well">
+          <div class="container-fluid well admin_panel">
             <h1>{{=T("Website Email Settings")}}</h1>
             <p>{{=T("Put here your settings to send emails")}}.</p>
           </div>
-          <div class="container-fluid well">
+          <div class="container-fluid well admin_panel">
             {{=form}}
           </div><!--/row-->
         </div><!--/span-->
