--- a/views/adminpanel/config_website_faq.html
+++ b/views/adminpanel/config_website_faq.html
@@ -1,6 +1,6 @@
 {{extend 'layoutadmin.html'}}
         <div class="span9">
-          <div class="container-fluid well">
+          <div class="container-fluid well admin_panel">
             <h1>{{=T("Website F.A.Q")}}</h1>
           </div>
           <div class="container-fluid">
