--- a/views/adminpanel/index.html
+++ b/views/adminpanel/index.html
@@ -1,7 +1,7 @@
 {{extend 'layoutadmin.html'}}
 
         <div class="span9">
-          <div class="container-fluid well">
+          <div class="container-fluid well admin_panel">
             <h1>{{=T("Admin Panel")}}</h1>
             <p>{{=T("Use the left side menu to manage the system and the registered projects.")}}</p>
           </div>
