--- a/views/adminpanel/list_actives_projects.html
+++ b/views/adminpanel/list_actives_projects.html
@@ -1,6 +1,6 @@
 {{extend 'layoutadmin.html'}}
         <div class="span9">
-          <div class="container-fluid well">
+          <div class="container-fluid well admin_panel">
             <h1>{{=T("Active Projects")}}</h1>
             <p>{{=T("Here are listed all active projects")}}</p>
           </div>
