--- a/views/adminpanel/config_website_images.html
+++ b/views/adminpanel/config_website_images.html
@@ -1,10 +1,10 @@
 {{extend 'layoutadmin.html'}}
         <div class="span9">
-          <div class="container-fluid well">
+          <div class="container-fluid well admin_panel">
             <h1>{{=T("Website Images")}}</h1>
             <p>{{=T("Set here your images")}}.</p>
           </div>
-          <div class="container-fluid well">
+          <div class="container-fluid well admin_panel">
             <p>
               <h2>{{=T("Website Images")}}</h2>
               <div id="config_website_images" >
