--- a/views/adminpanel/config_website_payment.html
+++ b/views/adminpanel/config_website_payment.html
@@ -1,10 +1,10 @@
 {{extend 'layoutadmin.html'}}
         <div class="span9">
-          <div class="container-fluid well">
+          <div class="container-fluid well admin_panel">
             <h1>{{=T("Website Payment Settings")}}</h1>
             <p>{{=T("Put here your payment settings")}}.</p>
           </div>
-          <div class="container-fluid well">
+          <div class="container-fluid well admin_panel">
             {{=form}}
           </div><!--/row-->
         </div><!--/span-->
