--- a/views/adminpanel/list_all_projects.html
+++ b/views/adminpanel/list_all_projects.html
@@ -1,6 +1,6 @@
 {{extend 'layoutadmin.html'}}
         <div class="span9">
-          <div class="container-fluid well">
+          <div class="container-fluid well admin_panel">
             <h1>{{=T("All Projects.")}}</h1>
             <p>{{=T("Here are listed all the projects registered on the system")}}.</p>
           </div>
