--- a/views/adminpanel/list_pending_projects.html
+++ b/views/adminpanel/list_pending_projects.html
@@ -1,11 +1,13 @@
 {{extend 'layoutadmin.html'}}
         <div class="span9">
-          <div class="container-fluid well">
+          <div class="container-fluid well admin_panel">
             <h1>{{=T("Pending Projects.")}}</h1>
             <p>{{=T("Here are listed all the projects that are awaiting for approval")}}.</p>
           </div>
           <div class="row-fluid">
-            {{=grid}}
+            <div id="list_pending">
+              {{=grid}}
+            </div>
           </div><!--/row-->
         </div><!--/span-->
       </div><!--/row-->
