--- a/views/user/profile_edit.html
+++ b/views/user/profile_edit.html
@@ -57,7 +57,7 @@
                       </p>
                       <p>
                         <label for="">{{=T("EIN")}}:</label>
-                        {{=form_profile_edit.custom.widget.ein}}
+                        {{=form_profile_edit.custom.widget.ssc}}
                       </p>
                       <p>
                         <label for="">{{=T("Website")}}:</label>
