Adiciona Termos de Uso

--- a/views/layoutadmin.html
+++ b/views/layoutadmin.html
@@ -99,6 +99,7 @@
               <li><a href="{{=URL(c='adminpanel', f='list_all_projects')}}">{{=T("List All")}}</a></li>
               <li class="nav-header">{{=T("App Settings")}}</li>
               <li><a href="{{=URL(c='adminpanel', f='config_website_info')}}">{{=T("Website Info")}}</a></li>
+              <li><a href="{{=URL(c='adminpanel', f='config_website_terms')}}">{{=T("Terms of use")}}</a></li>
               <li><a href="{{=URL(c='adminpanel', f='config_website_categories')}}">{{=T("Projects Categories")}}</a></li>
               <li><a href="{{=URL(c='adminpanel', f='config_website_images')}}">{{=T("Website Images")}}</a></li>
               <li><a href="{{=URL(c='adminpanel', f='config_website_links')}}">{{=T("Social Network")}}</a></li>
