--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -115,6 +115,11 @@
                             </a>
                           </td>
                           <td class="th_action">
+                            <a href="{{=URL(c='project', f='project_view_donations', args=[project_created.id])}}">
+                              {{=T("View Donations")}}
+                            </a>
+                          </td>
+                          <td class="th_action">
                             <a href="{{=URL(c='project', f='project_edit', args=project_created.id)}}">{{=T("Edit")}}</a>
                           </td>
                           <td class="th_action">
